removed unnecessary <all_urls> permission; only gitcdn needed

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
     "manifest_version": 2,
     "name": "Media Literacy",
-    "version": "0.2.0.dev1",
+    "version": "0.2.0.dev2",
 
     "description": "See bias analyses and transparency information about online media outlets.",
     "homepage_url": "https://github.com/fergusch",
@@ -11,7 +11,7 @@
     },
 
     "permissions": [
-        "<all_urls>",
+        "*://gitcdn.link/*",
         "tabs",
         "activeTab",
         "storage"
